trying to fix DEV-493 and wrap long product names on edit list page

--- a/css/style.css
+++ b/css/style.css
@@ -1886,6 +1886,9 @@ a.tooltip:hover span {
 #my-list {
 	margin-bottom: 20px;
 }
+#my-list .prod-desc h3 {
+  max-width: 570px;
+}
 /* page colors ---- */
 #title {
 	background: #fff;
